Switched from dummy gateway to live gateway

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -58,3 +58,7 @@ omi.settings.dateFormat=dd/MM/yyyy
 omi.settings.maxConcat=10
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
+
+#Gateway settings
+orserve.gateway.senderId=MoTeCH
+orserve.gateway.productCode=m0t3ch-d3v
