--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -42,7 +42,7 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 
 ##ORserve
 orserve.gateway.senderId=MoTeCH
-orserve.gateway.productCode=nu-ob-demo
+orserve.gateway.productCode=m0t3ch-d3v
 
 ##Clickatell
 #clickatell.gateway.apiId=3107994
