--- a/motech-mobile-omi/src/test/resources/omi.settings.properties
+++ b/motech-mobile-omi/src/test/resources/omi.settings.properties
@@ -6,6 +6,10 @@ omi.settings.maxConcat=10
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
 
+#Gateway settings
+orserve.gateway.senderId=MoTeCH
+orserve.gateway.productCode=m0t3ch-d3v
+
 #Registrar Web Service Properties
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
