--- a/pom.xml
+++ b/pom.xml
@@ -235,7 +235,7 @@
             <dependency>
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
-                <version>1.0-M5-SNAPSHOT</version>
+                <version>1.0-M5</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
