--- a/motech-mobile-imp/src/test/resources/mysql.hibernate.properties
+++ b/motech-mobile-imp/src/test/resources/mysql.hibernate.properties
@@ -3,4 +3,4 @@
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=validate
