Updated ibernate.show_sql with  to hibernate.show_sql

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -4,7 +4,7 @@
 ###Hibernate/JDBC Settings
 ##HSQL
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-ibernate.show_sql=false
+hibernate.show_sql=false
 hibernate.hbm2ddl.auto=create
 
 
