--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.motechproject</groupId>
     <artifactId>motech-mobile</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-M5</version>
+    <version>1.0-M6-SNAPSHOT</version>
     <name>MoTeCH Mobile</name>
     <url>https://motech.rcg.usm.maine.edu/redmine/projects/show/motech-mobile</url>
 
@@ -214,22 +214,22 @@
             <dependency>
                 <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-core</artifactId>
-                <version>1.0-M5</version>
+                <version>1.0-M6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-omp</artifactId>
-                <version>1.0-M5</version>
+                <version>1.0-M6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-omi</artifactId>
-                <version>1.0-M5</version>
+                <version>1.0-M6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.motechproject.mobile</groupId>
                 <artifactId>motech-mobile-imp</artifactId>
-                <version>1.0-M5</version>
+                <version>1.0-M6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.motechproject</groupId>
@@ -537,9 +537,9 @@
         </profile>
     </profiles>
     <scm>
-        <url>https://motech.rcg.usm.maine.edu/redmine/repositories/show/motech-mobile/tags/motech-mobile-1.0-M5</url>
-        <connection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/tags/motech-mobile-1.0-M5</connection>
-        <developerConnection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/tags/motech-mobile-1.0-M5</developerConnection>
+        <url>https://motech.rcg.usm.maine.edu/redmine/repositories/show/motech-mobile/branches/1.0-M5</url>
+        <connection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/branches/1.0-M5</connection>
+        <developerConnection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/branches/1.0-M5</developerConnection>
     </scm>
 
 </project>
