Separated data entry form processing from query processing. Separated mobile request validation from registrar web service calls. Updated user request processor to call registrar web services dynamically.

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -1,7 +1,3 @@
-#Registrar Web Service Properties
-registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
-registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
-
 #Request Expressions
 imp.form.param.valueSparator=\=
 imp.form.param.delimiter=\\n
@@ -16,7 +12,7 @@ imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
 
 #Validator Expressions
-imp.validator.dateFormat=yyyy-MM-dd
+imp.validator.dateFormat=dd/MM/yyyy
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
@@ -36,22 +32,64 @@ imp.xmlparser.formNameTagName=formname
 #OXD Setting
 imp.oxd.oxdFormDefsResource1=/oxd-form-defs/MoTeCHDataEntry.xml
 imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
+imp.oxd.oxdFormDefsResource3=/oxd-form-defs/TestStudy.xml
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
+imp.oxd.dateExpression=(19|20)\\d\\d\\-(0[1-9]|1[012])\\-(0[1-9]|[12][0-9]|3[01])
+imp.oxd.dateFormat=yyyy-MM-dd
 
 #Configuration for sms responses
-imp.response.maxConcat=10
+imp.response.maxConcat=3
 imp.response.charsPerSMS=160
 imp.response.concatAllowance=7
 imp.response.maxSMS=3
+imp.response.sendQueryResponse=true
+imp.response.sendEncounterResponse=false
 
 #Configuration for demo responses
 imp.demo.messageType=SMS:TEXT
 imp.demo.provider=Vodafone
 imp.demo.senderAddr=+233000000000
 
-#OMI Messaging settings
+#============================Registrar Web Service Configurations==================
+
+#Registrar Web Service Properties
+registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
+registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
+
+#============================End of Registrar Web Service Configurations=======
+
+
+#============================Core Module Configurations============================
+###Hibernate/JDBC Settings
+##HSQL
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=create
+
+
+##HSQL JDBC
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.username=sa
+jdbc.password=
+jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
+
+#============================End of Core Module Configurations====================
+
+
+#============================OMP Module Configurations============================
+
+#ORserve
+orserve.gateway.senderId=MoTeCH
+orserve.gateway.productCode=m0t3ch-d3v
+
+#============================End of OMP Module Configurations=====================
+
+
+#============================OMI Module Configurations============================
+
+#Messaging settings
 omi.settings.maxTries=3
 omi.settings.defaultLang=en
 omi.settings.dateFormat=dd/MM/yyyy
@@ -59,17 +97,4 @@ omi.settings.maxConcat=10
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
 
-#Gateway settings
-orserve.gateway.senderId=MoTeCH
-orserve.gateway.productCode=m0t3ch-d3v
-
-#Hibernate properties
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
-
-#HSQLDB
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.username=sa
-jdbc.password=
-jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
+#============================End of OMI Module Configurations=====================
