--- a/motech-mobile-imp/src/test/resources/log4j.properties
+++ b/motech-mobile-imp/src/test/resources/log4j.properties
@@ -21,6 +21,6 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.debug=true
 
-log4j.category.org.acegisecurity=DEBUG
-log4j.category.org.springframework=DEBUG
-log4j.category.org.hibernate=DEBUG
+log4j.category.org.acegisecurity=ERROR
+log4j.category.org.springframework=ERROR
+log4j.category.org.hibernate=ERROR
