--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -44,15 +44,6 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 orserve.gateway.senderId=MoTeCH
 orserve.gateway.productCode=m0t3ch-d3v
 
-##Clickatell
-#clickatell.gateway.apiId=3107994
-#clickatell.gateway.user=iwalletMobile
-#clickatell.gateway.password=1dr3wa113t
-#clickatell.gateway.sender=iwm
-#clickatell.gateway.deliveryAcknowledge=1
-#clickatell.gateway.callback=2
-#clickatell.gateway.baseUrl=https://api.clickatell.com/http/
-
 #============================End of OMP Module Configurations=====================
 
 #============================OMI Module Configurations============================
@@ -103,6 +94,7 @@ imp.xmlparser.formNameTagName=formname
 #OXD Setting
 imp.oxd.oxdFormDefsResource1=/oxd-form-defs/MoTeCHDataEntry.xml
 imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
+imp.oxd.oxdFormDefsResource3=/oxd-form-defs/TestStudy.xml
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
@@ -114,6 +106,8 @@ imp.response.maxConcat=3
 imp.response.charsPerSMS=160
 imp.response.concatAllowance=7
 imp.response.maxSMS=3
+imp.response.sendQueryResponse=true
+imp.response.sendEncounterResponse=false
 
 #Configuration for demo responses
 imp.demo.messageType=SMS:TEXT
