Applied Brent's patch for sms-lib based modem gateway. Relates to issue #247.

--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -77,6 +77,10 @@
           <artifactId>motech-mobile-imp</artifactId>
         </dependency>
         <dependency>
+        	<groupId>org.motechproject.mobile</groupId>
+        	<artifactId>motech-mobile-modemgw</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.motechproject</groupId>
             <artifactId>motech-wsapi</artifactId>
         </dependency>
