--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -16,3 +16,5 @@ log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
+# So that you can tell when attempting to use modem
+log4j.category.smslib=INFO
