Added defaultCountryCode and localNumberExpression to imp settings. Added check for 10-digit phone number beginning with 0 (Ghana local number) and formatted them with the default country code before sending response. Resolves #407

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -108,6 +108,8 @@ imp.response.concatAllowance=7
 imp.response.maxSMS=3
 imp.response.sendQueryResponse=true
 imp.response.sendEncounterResponse=false
+imp.response.localNumberExpression=0[0-9]{9}
+imp.response.defaultCountryCode=233
 
 #Configuration for demo responses
 imp.demo.messageType=SMS:TEXT
