--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -75,6 +75,7 @@ imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
 
 #Validator Expressions
 imp.validator.dateFormat=dd/MM/yyyy
+imp.validator.dateTimeFormat=y-M-d H:m:s
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
