Removed BCG and OPV from Delivery. Fixes #431 Added response phone to patient registration in data entry and field studies. refs 425, 426

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -70,7 +70,7 @@ imp.form.successResponse=ok
 
 #Command Expressions
 imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
-imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
+imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*[a-zA-Z0-9_-]+
 imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
 
 #Validator Expressions
