--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -1,6 +1,5 @@
 #This file contains the settings info of MoTeCH Mobile
 
-#============================Core Module Configurations============================
 ###Hibernate/JDBC Settings
 ##HSQL
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
@@ -32,21 +31,17 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 
 ##MySQL JDBC
 #jdbc.driverClassName=com.mysql.jdbc.Driver
-#dbc.username=motechmobile
+#jdbc.username=motechmobile
 #jdbc.password=mmobilepass
 #jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
-#============================End of Core Module Configurations====================
 
-#============================OMP Module Configurations============================
 
 ##ORserve
 orserve.gateway.senderId=MoTeCH
 orserve.gateway.productCode=m0t3ch-d3v
 
-#============================End of OMP Module Configurations=====================
 
-#============================OMI Module Configurations============================
 
 #Messaging settings
 omi.settings.maxTries=3
@@ -56,9 +51,7 @@ omi.settings.maxConcat=10
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
 
-#============================End of OMI Module Configurations=====================
 
-#============================IMP Module Configurations============================
 
 #Request Expressions
 imp.form.param.valueSparator=\=
@@ -93,9 +86,9 @@ imp.xmlparser.formTypeTagName=formtype
 imp.xmlparser.formNameTagName=formname
 
 #OXD Setting
-imp.oxd.oxdFormDefsResource1=/oxd-form-defs/MoTeCHDataEntry.xml
-imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
-imp.oxd.oxdFormDefsResource3=/oxd-form-defs/MoTeCHFieldAgentDataEntry.xml
+imp.oxd.oxdFormDefsResource1=/oxd-form-defs/NurseDataEntry.xml
+imp.oxd.oxdFormDefsResource2=/oxd-form-defs/NurseQuery.xml
+imp.oxd.oxdFormDefsResource3=/oxd-form-defs/FieldAgentForms.xml
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
@@ -117,9 +110,7 @@ imp.demo.messageType=SMS:TEXT
 imp.demo.provider=Vodafone
 imp.demo.senderAddr=+233000000000
 
-#==========================End of IMP Module Configurations=======================
 
-#============================Web Module Configurations============================
 
 #Parameter to expect in IncomingMessage Servlet for requestor's phone number
 org.motechproject.mobile.web.incomingMessageFromParam=from
@@ -130,12 +121,9 @@ org.motechproject.mobile.web.incomingMessageTextParam=text
 #Error Message to send when unknown parameters are encountered
 org.motechproject.mobile.web.error.UnknownRequest=Unknown Request
 
-#============================End of Web Module Configurations======================
 
-#============================Registrar Web Service Configurations==================
 
 #Registrar Web Service Properties
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 
-#============================End of Registrar Web Service Configurations=======
