--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -64,11 +64,11 @@ imp.form.successResponse=ok
 #Command Expressions
 imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
 imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*[a-zA-Z0-9_-]+
-imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
+imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-:\\s/.,'])+
 
 #Validator Expressions
 imp.validator.dateFormat=dd/MM/yyyy
-imp.validator.dateTimeFormat=y-M-d H:m:s
+imp.validator.dateTimeFormat=yyyy-MM-dd hh:mm:ss a
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\_\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
@@ -124,6 +124,6 @@ org.motechproject.mobile.web.error.UnknownRequest=Unknown Request
 
 
 #Registrar Web Service Properties
-registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
+registrar.webservice.wsdlUrl=http://localhost:8088/openmrs/ws/RegistrarService?wsdl
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 
