--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -69,7 +69,12 @@ imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-:\\s/.,'])+
 #Validator Expressions
 imp.validator.dateFormat=dd/MM/yyyy
 imp.validator.dateTimeFormat=yyyy-MM-dd hh:mm:ss a
+imp.validator.timeFormat=hh:mm:ss a
+imp.validator.defaultDateFormat=yyyy-MM-dd hh:mm:ss a
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
+imp.validator.dateTimeExpression=^((0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[012])-(19|20)\\d\\d (0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
+imp.validator.timeExpression=^((0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
+imp.validator.defaultDateExpression=^((0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[012])-(19|20)\\d\\d (0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\_\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
 imp.validator.phoneTypeExpression=[a-zA-Z]+
