Added writing of IVR call reports to a separate log file.

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -18,3 +18,14 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
 # So that you can tell when attempting to use modem
 log4j.category.smslib=INFO
+
+# IVR log level
+log4j.logger.org.motechproject.mobile.omp.manager.intellivr=DEBUG
+
+# IVR Report Log
+log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
+log4j.appender.ivrreportlog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ivrreportlog.File=${catalina.home}/logs/ivrreports.log
+log4j.appender.ivrreportlog.DatePattern='.'yyyy-MM-dd
+log4j.appender.ivrreportlog.layout=org.apache.log4j.PatternLayout
+log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
