Added test calls for all RegistrarService methods Removed references to omi-config.xml and core-config.xml from imp-config.xml. Updated batabase script and registrar-services.xml to match RegistrarService methods, revision 68 (https://motech.rcg.usm.maine.edu/redmine/repositories/revision/motech-wsapi/68)

--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -8,14 +8,19 @@ imp.form.successResponse=ok
 
 #Command Expressions
 imp.form.commandExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))
-imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*\\w+
-imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-\\s/.,'])+
+imp.form.typeExpression=^(([tT][yY][pP][eE])|([qQ][uU][eE][rR][yY]))\\s*=\\s*[a-zA-Z0-9_-]+
+imp.form.paramExpression=[a-zA-Z0-9_\\-]+\\s*=\\s*([a-zA-Z0-9_\\-:\\s/.,'])+
 
 #Validator Expressions
 imp.validator.dateFormat=dd/MM/yyyy
-imp.validator.dateTimeFormat=y-M-d H:m:s
+imp.validator.dateTimeFormat=yyyy-MM-dd hh:mm:ss a
+imp.validator.timeFormat=hh:mm:ss a
+imp.validator.defaultDateFormat=yyyy-MM-dd hh:mm:ss a
 imp.validator.dateExpression=(0[1-9]|[12][0-9]|3[01])[\\-/.]?(0[1-9]|1[012])[\\-/.]?(19|20)?\\d\\d
-imp.validator.alphaExpression=[a-zA-Z.,'\\-\\s]+
+imp.validator.dateTimeExpression=^((0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[012])-(19|20)\\d\\d (0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
+imp.validator.timeExpression=^((0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
+imp.validator.defaultDateExpression=^((0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[012])-(19|20)\\d\\d (0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
+imp.validator.alphaExpression=[a-zA-Z.,'\\-\\_\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
 imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
@@ -31,9 +36,9 @@ imp.xmlparser.formTypeTagName=formtype
 imp.xmlparser.formNameTagName=formname
 
 #OXD Setting
-imp.oxd.oxdFormDefsResource1=/oxd-form-defs/MoTeCHDataEntry.xml
-imp.oxd.oxdFormDefsResource2=/oxd-form-defs/MoTeCHQuery.xml
-imp.oxd.oxdFormDefsResource3=/oxd-form-defs/TestStudy.xml
+imp.oxd.oxdFormDefsResource1=/oxd-form-defs/NurseDataEntry.xml
+imp.oxd.oxdFormDefsResource2=/oxd-form-defs/NurseQuery.xml
+imp.oxd.oxdFormDefsResource3=/oxd-form-defs/FieldAgentForms.xml
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
