Moved IntellIVRGateway settings out into the properties file.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -41,7 +41,18 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 orserve.gateway.senderId=MoTeCH
 orserve.gateway.productCode=m0t3ch-d3v
 
-
+##IntellIVR Gateway
+intellivr.gateway.reportURL=http://motech-ws.rcg.usm.maine.edu:8080/motech-mobile-webapp/intellivr
+intellivr.gateway.apiID=Cqyc0kReo98jxWz9N0qYKzBslRYaLsStA6shaLkHdfnpDU3C2E
+intellivr.gateway.defaultLanguage=English
+intellivr.gateway.defaultTree=pregnancy_week_5
+intellivr.gateway.defaultReminder=prompt_IR2.wav
+intellivr.gateway.bundlingDelay=30000
+intellivr.gateway.retryDelay=1
+intellivr.gateway.maxAttempts=2
+intellivr.gateway.maxDays=2
+intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
+intellivr.gateway.ivrConfig=classpath:intellivr.conf
 
 #Messaging settings
 omi.settings.maxTries=3
