Removed cause field from death form. Added conversion of all phone numbers hitting the messaging web service from Ghana local format to international format. resolves #493

--- a/motech-mobile-omi/src/test/resources/omi.settings.properties
+++ b/motech-mobile-omi/src/test/resources/omi.settings.properties
@@ -5,6 +5,8 @@ omi.settings.dateFormat=dd/mm/yyyy
 omi.settings.maxConcat=10
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
+omi.settings.localNumberExpression=0[0-9]{9}
+omi.settings.defaultCountryCode=233
 
 #Gateway settings
 orserve.gateway.senderId=MoTeCH
