--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=WARN, stdout, logfile
+log4j.rootLogger=ERROR, stdout, logfile
 
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
