--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -61,6 +61,8 @@ omi.settings.dateFormat=dd/MM/yyyy
 omi.settings.maxConcat=10
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
+omi.settings.localNumberExpression=0[0-9]{9}
+omi.settings.defaultCountryCode=233
 
 
 
