log4j-motech.properties - added separate IVR call log file. intellivr/IntellIVRBean.java - log message about IVR calls to the IVR call log

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -29,3 +29,11 @@ log4j.appender.ivrreportlog.File=${catalina.home}/logs/ivrreports.log
 log4j.appender.ivrreportlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.ivrreportlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
+
+# IVR Call Log
+log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.calllog=INFO, ivrcalls
+log4j.appender.ivrcalls=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ivrcalls.File=${catalina.home}/logs/ivrcalls.log
+log4j.appender.ivrcalls.DatePattern='.'yyyy-MM-dd
+log4j.appender.ivrcalls.layout=org.apache.log4j.PatternLayout
+log4j.appender.ivrcalls.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
