Fixes #506. Changed catalina.home to catalina.base

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=${catalina.home}/logs/motech-mobile.log
+log4j.appender.logfile.File=${catalina.base}/logs/motech-mobile.log
 log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 
 # Pattern to output: date priority [thread] [category] - message
@@ -25,7 +25,7 @@ log4j.logger.org.motechproject.mobile.omp.manager.intellivr=DEBUG
 # IVR Report Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
 log4j.appender.ivrreportlog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ivrreportlog.File=${catalina.home}/logs/ivrreports.log
+log4j.appender.ivrreportlog.File=${catalina.base}/logs/ivrreports.log
 log4j.appender.ivrreportlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.ivrreportlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
