Resolves #508 refs #463. Removed Gravida and Parity so build doesn't break.

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -33,7 +33,7 @@ log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%
 # IVR Call Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.calllog=INFO, ivrcalls
 log4j.appender.ivrcalls=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ivrcalls.File=${catalina.home}/logs/ivrcalls.log
+log4j.appender.ivrcalls.File=${catalina.base}/logs/ivrcalls.log
 log4j.appender.ivrcalls.DatePattern='.'yyyy-MM-dd
 log4j.appender.ivrcalls.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrcalls.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
