intellivr/IntellIVRBean.java - added a call complete threshold field.  If the duration of a call is less than this threshold the call is not considered complete and will be treated as a failed call. omp-config.xml - added injection of call threshold motech-settings.properties - added parameter for setting the call threshold.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -51,6 +51,7 @@ intellivr.gateway.bundlingDelay=30000
 intellivr.gateway.retryDelay=1
 intellivr.gateway.maxAttempts=2
 intellivr.gateway.maxDays=2
+intellivr.gateway.callCompletedThreshold=30
 intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
 intellivr.gateway.ivrConfig=classpath:intellivr.conf
 
