Tested and fixed bugs in RancardGatewayManagerImpl. resolves #424

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -36,8 +36,15 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 #jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
 
+##Rancard Gateway
+rancard.gateway.user=
+rancard.gateway.password=
+rancard.gateway.sentStatus=SENT
+rancard.gateway.okStatus=SENT
+rancard.gateway.senderId=MoTeCH
+rancard.gateway.serviceURL=http://app.rancardmobility.com/rmcs/sendMessage.jsp?
 
-##ORserve
+##ORserve Gateway
 orserve.gateway.senderId=MoTeCH
 orserve.gateway.productCode=m0t3ch-d3v
 
