--- a/motech-mobile-core/src/test/resources/hsql.hibernate.properties
+++ b/motech-mobile-core/src/test/resources/hsql.hibernate.properties
@@ -2,5 +2,5 @@
 # of Hibernate.
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.hbm2ddl.auto=create
