--- a/motech-mobile-imp/src/test/resources/log4j.properties
+++ b/motech-mobile-imp/src/test/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.logfile.MaxBackupIndex=3
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.debug=true
+log4j.debug=false
 
 log4j.category.org.acegisecurity=ERROR
 log4j.category.org.springframework=ERROR
