Updated cxf logging to use log4j and new log file, Removed stdout logging

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=ERROR, stdout, logfile
+log4j.rootLogger=ERROR, logfile
 
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -37,3 +37,11 @@ log4j.appender.ivrcalls.File=${catalina.base}/logs/ivrcalls.log
 log4j.appender.ivrcalls.DatePattern='.'yyyy-MM-dd
 log4j.appender.ivrcalls.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrcalls.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
+
+# CXF Web Services Log
+#log4j.logger.org.apache.cxf=INFO, wslogfile
+log4j.appender.wslogfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.wslogfile.File=${catalina.base}/logs/motech-mobile-ws.log
+log4j.appender.wslogfile.DatePattern='.'yyyy-MM-dd
+log4j.appender.wslogfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.wslogfile.layout.ConversionPattern=%d %-5p [%c] %m%n
