Updated cxf logging, active with higher level and avoids double logging

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -39,7 +39,8 @@ log4j.appender.ivrcalls.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrcalls.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
 
 # CXF Web Services Log
-#log4j.logger.org.apache.cxf=INFO, wslogfile
+log4j.logger.org.apache.cxf=ERROR, wslogfile
+log4j.additivity.org.apache.cxf=false
 log4j.appender.wslogfile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.wslogfile.File=${catalina.base}/logs/motech-mobile-ws.log
 log4j.appender.wslogfile.DatePattern='.'yyyy-MM-dd
