--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,7 @@
             <dependency>
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
-                <version>0.6.0</version>
+                <version>0.7-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
