--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -62,6 +62,7 @@ intellivr.gateway.maxDays=7
 intellivr.gateway.callCompletedThreshold=15
 intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
 intellivr.gateway.ivrConfig=classpath:intellivr.conf
+intellivr.gateway.sessionCacheFile=file:ivrsession.cache
 
 #Messaging settings
 omi.settings.maxTries=3
