--- a/motech-mobile-modemgw/pom.xml
+++ b/motech-mobile-modemgw/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org.motechproject</groupId>
 		<artifactId>motech-mobile</artifactId>
-		<version>0.6.0-SNAPSHOT</version>
+		<version>0.6.0</version>
 	</parent>
 	<groupId>org.motechproject.mobile</groupId>
 	<artifactId>motech-mobile-modemgw</artifactId>
-	<version>0.6.0-SNAPSHOT</version>
+	<version>0.6.0</version>
 	<name>MoTeCH Mobile Modem Gateway</name>
 	<description>A gateway manager implementation based on SMSLib.</description>
 	<dependencies>
