intellivr/IntellIVRBean.java - added new field preReminderDelay.  This specifies a number of seconds of silence there should be before the reminder messages start playing.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -60,6 +60,7 @@ intellivr.gateway.retryDelay=15
 intellivr.gateway.maxAttempts=4
 intellivr.gateway.maxDays=7
 intellivr.gateway.callCompletedThreshold=15
+intellivr.gateway.preReminderDelay=3
 intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
 intellivr.gateway.ivrConfig=classpath:intellivr.conf
 intellivr.gateway.sessionCacheFile=file:ivrsession.cache
