intellivr/IntellIVRBean.java - added field welcomeMessageRecordingName to hold the name of recoding to be pre-pended to the reminder messages for outbound calls. omp-config.xml - welcomeMessageRecordingName property to intellivrbean.  Value if tied to a value in the .properties file. Resolves #639

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -62,6 +62,7 @@ intellivr.gateway.maxDays=7
 intellivr.gateway.callCompletedThreshold=15
 intellivr.gateway.preReminderDelay=3
 intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
+intellivr.gateway.welcomeMessageRecordingName=
 intellivr.gateway.ivrConfig=classpath:intellivr.conf
 intellivr.gateway.sessionCacheFile=file:ivrsession.cache
 
