log4j-motech.properties - turned down ivr logging level.  Resolves #688

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -20,7 +20,7 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 log4j.category.smslib=INFO
 
 # IVR log level
-log4j.logger.org.motechproject.mobile.omp.manager.intellivr=DEBUG
+log4j.logger.org.motechproject.mobile.omp.manager.intellivr=ERROR
 
 # IVR Report Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
