intellivr/IntellIVRBean.java - added a new field availableDays.  It is the number of days a message remains available for inbound user to listen to it independent of the delivery status of the message.  Previously this was the same the maxDays setting for delivery.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -59,6 +59,7 @@ intellivr.gateway.bundlingDelay=30000
 intellivr.gateway.retryDelay=15
 intellivr.gateway.maxAttempts=4
 intellivr.gateway.maxDays=7
+intellivr.gateway.availableDays=7
 intellivr.gateway.callCompletedThreshold=15
 intellivr.gateway.preReminderDelay=3
 intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
