motech-settings.properties - set a value of welcome.wav for the intellivr.gateway.welcomeMessageRecordingName property.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -63,7 +63,7 @@ intellivr.gateway.availableDays=7
 intellivr.gateway.callCompletedThreshold=15
 intellivr.gateway.preReminderDelay=3
 intellivr.gateway.noPendingMessagesRecordingName=prompt_H.wav
-intellivr.gateway.welcomeMessageRecordingName=
+intellivr.gateway.welcomeMessageRecordingName=welcome.wav
 intellivr.gateway.ivrConfig=classpath:intellivr.conf
 intellivr.gateway.sessionCacheFile=file:ivrsession.cache
 
