--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -54,8 +54,8 @@ orserve.gateway.senderId=MoTeCH
 orserve.gateway.productCode=m0t3ch-d3v
 
 ##IntellIVR Gateway
-intellivr.gateway.serverURL=http://ivr.yo.co.ug/intellivr/api/api
-intellivr.gateway.reportURL=http://motech-ws.rcg.usm.maine.edu:8080/motech-mobile-webapp/intellivr
+intellivr.gateway.serverURL=http://localhost/intellivr/api/api
+intellivr.gateway.reportURL=http://localhost:8080/motech-mobile-webapp/intellivr
 intellivr.gateway.apiID=Cqyc0kReo98jxWz9N0qYKzBslRYaLsStA6shaLkHdfnpDU3C2E
 intellivr.gateway.defaultLanguage=English
 intellivr.gateway.defaultTree=pregnancy_week_5
