Updated logging settings so ivrcall and reports are not propagated to the mobile log.

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -24,6 +24,7 @@ log4j.logger.org.motechproject.mobile.omp.manager.intellivr=ERROR
 
 # IVR Report Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
+log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=false
 log4j.appender.ivrreportlog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ivrreportlog.File=${catalina.base}/logs/ivrreports.log
 log4j.appender.ivrreportlog.DatePattern='.'yyyy-MM-dd
@@ -32,6 +33,7 @@ log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%
 
 # IVR Call Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.calllog=INFO, ivrcalls
+log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.calllog=false
 log4j.appender.ivrcalls=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ivrcalls.File=${catalina.base}/logs/ivrcalls.log
 log4j.appender.ivrcalls.DatePattern='.'yyyy-MM-dd
