Added Quartz job execution logging. @ack Matt

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -33,7 +33,7 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.username=motechmobile
 #jdbc.password=mmobilepass
-#jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
+#jdbc.url=jdbc:mysql://localhost:4470/motechmobiledb
 
 
 ##Liquibase Settings
@@ -160,6 +160,6 @@ org.motechproject.mobile.web.error.UnknownRequest=Unknown Request
 
 
 #Registrar Web Service Properties
-registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
+registrar.webservice.wsdlUrl=http://192.168.0.2:8080/openmrs/ws/RegistrarService?wsdl
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 
