Reverted unneeded changes from r847, Added log level for quartz job listener, Switched to using just name in listener

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=INFO, logfile
+log4j.rootLogger=ERROR, logfile
 
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -15,6 +15,9 @@ log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 # Pattern to output: date priority [thread] [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
+
+# Quartz job listener log level
+log4j.logger.org.motechproject.mobile.core.util.QuartzJobExecutionLogger=INFO
 
 # So that you can tell when attempting to use modem
 log4j.category.smslib=INFO
