Expanding logging in form upload servlet, set its log level to INFO.

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -25,6 +25,9 @@ log4j.category.smslib=INFO
 # IVR log level
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr=ERROR
 
+# Show upload requests so we can reference the timestamps
+log4j.logger.org.motechproject.mobile.web.OXDFormUploadServlet=INFO
+
 # IVR Report Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
 log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=false
