Added logging for dummy gateway

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -19,6 +19,9 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 # Quartz job listener log level
 log4j.logger.org.motechproject.mobile.core.util.QuartzJobExecutionLogger=INFO
 
+# Test SMS gateway log level
+log4j.logger.org.motechproject.mobile.omp.manager.DummyGatewayManagerImpl=INFO
+
 # So that you can tell when attempting to use modem
 log4j.category.smslib=INFO
 
