Logging mforms uploads to enable replay.

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -57,3 +57,12 @@ log4j.appender.wslogfile.File=${catalina.base}/logs/motech-mobile-ws.log
 log4j.appender.wslogfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.wslogfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.wslogfile.layout.ConversionPattern=%d %-5p [%c] %m%n
+
+# mForms Raw Upload Log
+log4j.logger.org.motechproject.mobile.web.OXDFormUploadServlet.mformsraw=DEBUG, mformsrawlog
+log4j.additivity.org.motechproject.mobile.web.OXDFormUploadServlet.mformsraw=false
+log4j.appender.mformsrawlog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.mformsrawlog.File=${catalina.base}/logs/mforms-uploads.log
+log4j.appender.mformsrawlog.DatePattern='.'yyyy-MM-dd
+log4j.appender.mformsrawlog.layout=org.apache.log4j.PatternLayout
+log4j.appender.mformsrawlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
