--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,16 @@
                 <version>1.5</version>
             </dependency>
             <dependency>
+            	<groupId>commons-io</groupId>
+            	<artifactId>commons-io</artifactId>
+            	<version>1.4</version>
+            </dependency>
+            <dependency>
+            	<groupId>commons-codec</groupId>
+            	<artifactId>commons-codec</artifactId>
+            	<version>1.4</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
                 <version>1.1.2</version>
