Duplicate form submissions now reported successful to mobile clients and logged.

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -31,6 +31,9 @@ log4j.logger.org.motechproject.mobile.omp.manager.intellivr=ERROR
 # Show upload requests so we can reference the timestamps
 log4j.logger.org.motechproject.mobile.web.OXDFormUploadServlet=INFO
 
+# Show parsed duplicate form submissions as they are detected
+log4j.logger.org.motechproject.mobile.imp.serivce.IMPServiceImpl=WARN
+
 # IVR Report Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
 log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=false
