--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -34,6 +34,15 @@ log4j.logger.org.motechproject.mobile.web.OXDFormUploadServlet=INFO
 # Show parsed duplicate form submissions as they are detected
 log4j.logger.org.motechproject.mobile.imp.serivce.IMPServiceImpl=WARN
 
+# Show Rancard messages
+log4j.logger.org.motechproject.mobile.omp.manager.rancard.RancardGatewayManagerImpl=DEBUG, rancardlog
+log4j.additivity.org.motechproject.mobile.omp.manager.rancard.RancardGatewayManagerImpl=false
+log4j.appender.rancardlog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rancardlog.File=${catalina.base}/logs/rancard.log
+log4j.appender.rancardlog.DatePattern='.'yyyy-MM-dd
+log4j.appender.rancardlog.layout=org.apache.log4j.PatternLayout
+log4j.appender.rancardlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
+
 # IVR Report Log
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
 log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=false
